...
                    } else {
                        cameraPosition = .front
                    }
                    sdk.setCameraPosition(cameraPosition)
                }
                // (Optional), example of how to switch smartSpectraMode at runtime
                Button(smartSpectraMode == .spot ? "Switch to Continuous" : "Switch to Spot", systemImage: smartSpectraMode == .spot ? "waveform.path" : "chart.dots.scatter") {
                    if smartSpectraMode == .spot {
                        smartSpectraMode = .continuous
                    } else {
                        smartSpectraMode = .spot
                    }
                    sdk.setSmartSpectraMode(smartSpectraMode)
...
