...
        var buttonState: ButtonState = .disable {
            didSet {
                DispatchQueue.main.async {
                    switch self.buttonState {
                    case .disable:
                        self.recordButton.backgroundColor = .lightGray
                        self.recordButton.setTitle("Record", for: .normal)
                        self.recordButton.titleLabel?.font = .systemFont(ofSize: 20)
                    case .ready:
                        self.recordButton.backgroundColor = self.recordButtonOptionObject?.backgroundColor
                        self.recordButton.setTitle("Record", for: .normal)
                        self.recordButton.titleLabel?.font = .systemFont(ofSize: 20)
                    case .countdown:
                        self.recordButton.setTitle("\(self.sdkConfig.recordingDelay)", for: .normal)
                        self.recordButton.titleLabel?.font = .boldSystemFont(ofSize: 40)
                    case .running:
                        self.recordButton.backgroundColor = self.recordButtonOptionObject?.backgroundColor
                        self.recordButton.setTitle("Stop", for: .normal)
                        self.recordButton.titleLabel?.font = .systemFont(ofSize: 20)
                    }
                }
            }
        }
        internal var imageHolder: UIImageView = {
...
